syntax.output
Grammar

    0 $accept: programme $end

    1 programme: MC_BEGINPROJECT IDF ';' MC_SETUP ':' declarations MC_RUN ':' '{' instructions '}' MC_ENDPROJECT ';'

    2 declarations: /* empty */
    3             | declarations declaration

    4 declaration: MC_DEFINE corps_declaration ';'
    5            | MC_CONST IDF ':' type '=' expression ';'

    6 corps_declaration: IDF ':' type
    7                  | liste_idf ':' type
    8                  | IDF ':' type '=' expression
    9                  | IDF ':' '[' type ';' CST_INT ']'

   10 liste_idf: IDF PIPE IDF
   11          | liste_idf PIPE IDF

   12 type: MC_INTEGER
   13     | MC_FLOAT

   14 instructions: /* empty */
   15             | instructions instruction

   16 instruction: IDF AFFECT expression ';'
   17            | IDF '[' expression ']' AFFECT expression ';'
   18            | if_stmt
   19            | loop_stmt
   20            | MC_OUTPUT '(' args_out ')' ';'
   21            | MC_INPUT '(' IDF ')' ';'

   22 if_stmt: MC_IF '(' expression ')' MC_THEN ':' '{' instructions '}' MC_ELSE '{' instructions '}' MC_ENDIF ';'
   23        | MC_IF '(' expression ')' MC_THEN ':' '{' instructions '}' MC_ENDIF ';'

   24 loop_stmt: MC_LOOP MC_WHILE '(' expression ')' '{' instructions '}' MC_ENDLOOP ';'
   25          | MC_FOR IDF MC_IN expression MC_TO expression '{' instructions '}' MC_ENDFOR ';'

   26 expression: expression '+' expression
   27           | expression '-' expression
   28           | expression '*' expression
   29           | expression '/' expression
   30           | expression '<' expression
   31           | expression '>' expression
   32           | expression INFEG expression
   33           | expression SUPEG expression
   34           | expression EGAL expression
   35           | expression DIFF expression
   36           | expression MC_AND expression
   37           | expression MC_OR expression
   38           | MC_NON '(' expression ')'
   39           | '(' expression ')'
   40           | IDF '[' expression ']'
   41           | IDF
   42           | CST_INT
   43           | CST_REEL

   44 args_out: arg
   45         | args_out ',' arg

   46 arg: expression
   47    | CST_STR


Terminals, with rules where they appear

$end (0) 0
'(' (40) 20 21 22 23 24 38 39
')' (41) 20 21 22 23 24 38 39
'*' (42) 28
'+' (43) 26
',' (44) 45
'-' (45) 27
'/' (47) 29
':' (58) 1 5 6 7 8 9 22 23
';' (59) 1 4 5 9 16 17 20 21 22 23 24 25
'<' (60) 30
'=' (61) 5 8
'>' (62) 31
'[' (91) 9 17 40
']' (93) 9 17 40
'{' (123) 1 22 23 24 25
'}' (125) 1 22 23 24 25
error (256)
MC_BEGINPROJECT (258) 1
MC_ENDPROJECT (259) 1
MC_SETUP (260) 1
MC_RUN (261) 1
MC_DEFINE (262) 4
MC_CONST (263) 5
MC_IF (264) 22 23
MC_THEN (265) 22 23
MC_ELSE (266) 22
MC_ENDIF (267) 22 23
MC_LOOP (268) 24
MC_WHILE (269) 24
MC_ENDLOOP (270) 24
MC_FOR (271) 25
MC_IN (272) 25
MC_TO (273) 25
MC_ENDFOR (274) 25
MC_AND (275) 36
MC_OR (276) 37
MC_NON (277) 38
MC_INPUT (278) 21
MC_OUTPUT (279) 20
PIPE (280) 10 11
AFFECT (281) 16 17
INFEG (282) 32
SUPEG (283) 33
EGAL (284) 34
DIFF (285) 35
IDF (286) 1 5 6 8 9 10 11 16 17 21 25 40 41
MC_INTEGER (287) 12
MC_FLOAT (288) 13
CST_STR (289) 47
CST_INT (290) 9 42
CST_REEL (291) 43


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
programme (54)
    on left: 1, on right: 0
declarations (55)
    on left: 2 3, on right: 1 3
declaration (56)
    on left: 4 5, on right: 3
corps_declaration (57)
    on left: 6 7 8 9, on right: 4
liste_idf (58)
    on left: 10 11, on right: 7 11
type (59)
    on left: 12 13, on right: 5 6 7 8 9
instructions (60)
    on left: 14 15, on right: 1 15 22 23 24 25
instruction (61)
    on left: 16 17 18 19 20 21, on right: 15
if_stmt (62)
    on left: 22 23, on right: 18
loop_stmt (63)
    on left: 24 25, on right: 19
expression (64)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43,
    on right: 5 8 16 17 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 46
args_out (65)
    on left: 44 45, on right: 20 45
arg (66)
    on left: 46 47, on right: 44 45


state 0

    0 $accept: . programme $end

    MC_BEGINPROJECT  shift, and go to state 1

    programme  go to state 2


state 1

    1 programme: MC_BEGINPROJECT . IDF ';' MC_SETUP ':' declarations MC_RUN ':' '{' instructions '}' MC_ENDPROJECT ';'

    IDF  shift, and go to state 3


state 2

    0 $accept: programme . $end

    $end  shift, and go to state 4


state 3

    1 programme: MC_BEGINPROJECT IDF . ';' MC_SETUP ':' declarations MC_RUN ':' '{' instructions '}' MC_ENDPROJECT ';'

    ';'  shift, and go to state 5


state 4

    0 $accept: programme $end .

    $default  accept


state 5

    1 programme: MC_BEGINPROJECT IDF ';' . MC_SETUP ':' declarations MC_RUN ':' '{' instructions '}' MC_ENDPROJECT ';'

    MC_SETUP  shift, and go to state 6


state 6

    1 programme: MC_BEGINPROJECT IDF ';' MC_SETUP . ':' declarations MC_RUN ':' '{' instructions '}' MC_ENDPROJECT ';'

    ':'  shift, and go to state 7


state 7

    1 programme: MC_BEGINPROJECT IDF ';' MC_SETUP ':' . declarations MC_RUN ':' '{' instructions '}' MC_ENDPROJECT ';'

    $default  reduce using rule 2 (declarations)

    declarations  go to state 8


state 8

    1 programme: MC_BEGINPROJECT IDF ';' MC_SETUP ':' declarations . MC_RUN ':' '{' instructions '}' MC_ENDPROJECT ';'
    3 declarations: declarations . declaration

    MC_RUN     shift, and go to state 9
    MC_DEFINE  shift, and go to state 10
    MC_CONST   shift, and go to state 11

    declaration  go to state 12


state 9

    1 programme: MC_BEGINPROJECT IDF ';' MC_SETUP ':' declarations MC_RUN . ':' '{' instructions '}' MC_ENDPROJECT ';'

    ':'  shift, and go to state 13


state 10

    4 declaration: MC_DEFINE . corps_declaration ';'

    IDF  shift, and go to state 14

    corps_declaration  go to state 15
    liste_idf          go to state 16


state 11

    5 declaration: MC_CONST . IDF ':' type '=' expression ';'

    IDF  shift, and go to state 17


state 12

    3 declarations: declarations declaration .

    $default  reduce using rule 3 (declarations)


state 13

    1 programme: MC_BEGINPROJECT IDF ';' MC_SETUP ':' declarations MC_RUN ':' . '{' instructions '}' MC_ENDPROJECT ';'

    '{'  shift, and go to state 18


state 14

    6 corps_declaration: IDF . ':' type
    8                  | IDF . ':' type '=' expression
    9                  | IDF . ':' '[' type ';' CST_INT ']'
   10 liste_idf: IDF . PIPE IDF

    PIPE  shift, and go to state 19
    ':'   shift, and go to state 20


state 15

    4 declaration: MC_DEFINE corps_declaration . ';'

    ';'  shift, and go to state 21


state 16

    7 corps_declaration: liste_idf . ':' type
   11 liste_idf: liste_idf . PIPE IDF

    PIPE  shift, and go to state 22
    ':'   shift, and go to state 23


state 17

    5 declaration: MC_CONST IDF . ':' type '=' expression ';'

    ':'  shift, and go to state 24


state 18

    1 programme: MC_BEGINPROJECT IDF ';' MC_SETUP ':' declarations MC_RUN ':' '{' . instructions '}' MC_ENDPROJECT ';'

    $default  reduce using rule 14 (instructions)

    instructions  go to state 25


state 19

   10 liste_idf: IDF PIPE . IDF

    IDF  shift, and go to state 26


state 20

    6 corps_declaration: IDF ':' . type
    8                  | IDF ':' . type '=' expression
    9                  | IDF ':' . '[' type ';' CST_INT ']'

    MC_INTEGER  shift, and go to state 27
    MC_FLOAT    shift, and go to state 28
    '['         shift, and go to state 29

    type  go to state 30


state 21

    4 declaration: MC_DEFINE corps_declaration ';' .

    $default  reduce using rule 4 (declaration)


state 22

   11 liste_idf: liste_idf PIPE . IDF

    IDF  shift, and go to state 31


state 23

    7 corps_declaration: liste_idf ':' . type

    MC_INTEGER  shift, and go to state 27
    MC_FLOAT    shift, and go to state 28

    type  go to state 32


state 24

    5 declaration: MC_CONST IDF ':' . type '=' expression ';'

    MC_INTEGER  shift, and go to state 27
    MC_FLOAT    shift, and go to state 28

    type  go to state 33


state 25

    1 programme: MC_BEGINPROJECT IDF ';' MC_SETUP ':' declarations MC_RUN ':' '{' instructions . '}' MC_ENDPROJECT ';'
   15 instructions: instructions . instruction

    MC_IF      shift, and go to state 34
    MC_LOOP    shift, and go to state 35
    MC_FOR     shift, and go to state 36
    MC_INPUT   shift, and go to state 37
    MC_OUTPUT  shift, and go to state 38
    IDF        shift, and go to state 39
    '}'        shift, and go to state 40

    instruction  go to state 41
    if_stmt      go to state 42
    loop_stmt    go to state 43


state 26

   10 liste_idf: IDF PIPE IDF .

    $default  reduce using rule 10 (liste_idf)


state 27

   12 type: MC_INTEGER .

    $default  reduce using rule 12 (type)


state 28

   13 type: MC_FLOAT .

    $default  reduce using rule 13 (type)


state 29

    9 corps_declaration: IDF ':' '[' . type ';' CST_INT ']'

    MC_INTEGER  shift, and go to state 27
    MC_FLOAT    shift, and go to state 28

    type  go to state 44


state 30

    6 corps_declaration: IDF ':' type .
    8                  | IDF ':' type . '=' expression

    '='  shift, and go to state 45

    $default  reduce using rule 6 (corps_declaration)


state 31

   11 liste_idf: liste_idf PIPE IDF .

    $default  reduce using rule 11 (liste_idf)


state 32

    7 corps_declaration: liste_idf ':' type .

    $default  reduce using rule 7 (corps_declaration)


state 33

    5 declaration: MC_CONST IDF ':' type . '=' expression ';'

    '='  shift, and go to state 46


state 34

   22 if_stmt: MC_IF . '(' expression ')' MC_THEN ':' '{' instructions '}' MC_ELSE '{' instructions '}' MC_ENDIF ';'
   23        | MC_IF . '(' expression ')' MC_THEN ':' '{' instructions '}' MC_ENDIF ';'

    '('  shift, and go to state 47


state 35

   24 loop_stmt: MC_LOOP . MC_WHILE '(' expression ')' '{' instructions '}' MC_ENDLOOP ';'

    MC_WHILE  shift, and go to state 48


state 36

   25 loop_stmt: MC_FOR . IDF MC_IN expression MC_TO expression '{' instructions '}' MC_ENDFOR ';'

    IDF  shift, and go to state 49


state 37

   21 instruction: MC_INPUT . '(' IDF ')' ';'

    '('  shift, and go to state 50


state 38

   20 instruction: MC_OUTPUT . '(' args_out ')' ';'

    '('  shift, and go to state 51


state 39

   16 instruction: IDF . AFFECT expression ';'
   17            | IDF . '[' expression ']' AFFECT expression ';'

    AFFECT  shift, and go to state 52
    '['     shift, and go to state 53


state 40

    1 programme: MC_BEGINPROJECT IDF ';' MC_SETUP ':' declarations MC_RUN ':' '{' instructions '}' . MC_ENDPROJECT ';'

    MC_ENDPROJECT  shift, and go to state 54


state 41

   15 instructions: instructions instruction .

    $default  reduce using rule 15 (instructions)


state 42

   18 instruction: if_stmt .

    $default  reduce using rule 18 (instruction)


state 43

   19 instruction: loop_stmt .

    $default  reduce using rule 19 (instruction)


state 44

    9 corps_declaration: IDF ':' '[' type . ';' CST_INT ']'

    ';'  shift, and go to state 55


state 45

    8 corps_declaration: IDF ':' type '=' . expression

    MC_NON    shift, and go to state 56
    IDF       shift, and go to state 57
    CST_INT   shift, and go to state 58
    CST_REEL  shift, and go to state 59
    '('       shift, and go to state 60

    expression  go to state 61


state 46

    5 declaration: MC_CONST IDF ':' type '=' . expression ';'

    MC_NON    shift, and go to state 56
    IDF       shift, and go to state 57
    CST_INT   shift, and go to state 58
    CST_REEL  shift, and go to state 59
    '('       shift, and go to state 60

    expression  go to state 62


state 47

   22 if_stmt: MC_IF '(' . expression ')' MC_THEN ':' '{' instructions '}' MC_ELSE '{' instructions '}' MC_ENDIF ';'
   23        | MC_IF '(' . expression ')' MC_THEN ':' '{' instructions '}' MC_ENDIF ';'

    MC_NON    shift, and go to state 56
    IDF       shift, and go to state 57
    CST_INT   shift, and go to state 58
    CST_REEL  shift, and go to state 59
    '('       shift, and go to state 60

    expression  go to state 63


state 48

   24 loop_stmt: MC_LOOP MC_WHILE . '(' expression ')' '{' instructions '}' MC_ENDLOOP ';'

    '('  shift, and go to state 64


state 49

   25 loop_stmt: MC_FOR IDF . MC_IN expression MC_TO expression '{' instructions '}' MC_ENDFOR ';'

    MC_IN  shift, and go to state 65


state 50

   21 instruction: MC_INPUT '(' . IDF ')' ';'

    IDF  shift, and go to state 66


state 51

   20 instruction: MC_OUTPUT '(' . args_out ')' ';'

    MC_NON    shift, and go to state 56
    IDF       shift, and go to state 57
    CST_STR   shift, and go to state 67
    CST_INT   shift, and go to state 58
    CST_REEL  shift, and go to state 59
    '('       shift, and go to state 60

    expression  go to state 68
    args_out    go to state 69
    arg         go to state 70


state 52

   16 instruction: IDF AFFECT . expression ';'

    MC_NON    shift, and go to state 56
    IDF       shift, and go to state 57
    CST_INT   shift, and go to state 58
    CST_REEL  shift, and go to state 59
    '('       shift, and go to state 60

    expression  go to state 71


state 53

   17 instruction: IDF '[' . expression ']' AFFECT expression ';'

    MC_NON    shift, and go to state 56
    IDF       shift, and go to state 57
    CST_INT   shift, and go to state 58
    CST_REEL  shift, and go to state 59
    '('       shift, and go to state 60

    expression  go to state 72


state 54

    1 programme: MC_BEGINPROJECT IDF ';' MC_SETUP ':' declarations MC_RUN ':' '{' instructions '}' MC_ENDPROJECT . ';'

    ';'  shift, and go to state 73


state 55

    9 corps_declaration: IDF ':' '[' type ';' . CST_INT ']'

    CST_INT  shift, and go to state 74


state 56

   38 expression: MC_NON . '(' expression ')'

    '('  shift, and go to state 75


state 57

   40 expression: IDF . '[' expression ']'
   41           | IDF .

    '['  shift, and go to state 76

    $default  reduce using rule 41 (expression)


state 58

   42 expression: CST_INT .

    $default  reduce using rule 42 (expression)


state 59

   43 expression: CST_REEL .

    $default  reduce using rule 43 (expression)


state 60

   39 expression: '(' . expression ')'

    MC_NON    shift, and go to state 56
    IDF       shift, and go to state 57
    CST_INT   shift, and go to state 58
    CST_REEL  shift, and go to state 59
    '('       shift, and go to state 60

    expression  go to state 77


state 61

    8 corps_declaration: IDF ':' type '=' expression .
   26 expression: expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . INFEG expression
   33           | expression . SUPEG expression
   34           | expression . EGAL expression
   35           | expression . DIFF expression
   36           | expression . MC_AND expression
   37           | expression . MC_OR expression

    MC_AND  shift, and go to state 78
    MC_OR   shift, and go to state 79
    INFEG   shift, and go to state 80
    SUPEG   shift, and go to state 81
    EGAL    shift, and go to state 82
    DIFF    shift, and go to state 83
    '<'     shift, and go to state 84
    '>'     shift, and go to state 85
    '+'     shift, and go to state 86
    '-'     shift, and go to state 87
    '*'     shift, and go to state 88
    '/'     shift, and go to state 89

    $default  reduce using rule 8 (corps_declaration)


state 62

    5 declaration: MC_CONST IDF ':' type '=' expression . ';'
   26 expression: expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . INFEG expression
   33           | expression . SUPEG expression
   34           | expression . EGAL expression
   35           | expression . DIFF expression
   36           | expression . MC_AND expression
   37           | expression . MC_OR expression

    MC_AND  shift, and go to state 78
    MC_OR   shift, and go to state 79
    INFEG   shift, and go to state 80
    SUPEG   shift, and go to state 81
    EGAL    shift, and go to state 82
    DIFF    shift, and go to state 83
    '<'     shift, and go to state 84
    '>'     shift, and go to state 85
    '+'     shift, and go to state 86
    '-'     shift, and go to state 87
    '*'     shift, and go to state 88
    '/'     shift, and go to state 89
    ';'     shift, and go to state 90


state 63

   22 if_stmt: MC_IF '(' expression . ')' MC_THEN ':' '{' instructions '}' MC_ELSE '{' instructions '}' MC_ENDIF ';'
   23        | MC_IF '(' expression . ')' MC_THEN ':' '{' instructions '}' MC_ENDIF ';'
   26 expression: expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '<' expression
   31           | expression . '>' expression
   32           | expression . INFEG expression
   33           | expression . SUPEG expression
   34           | expression . EGAL expression
   35           | expression . DIFF expression
   36           | expression . MC_AND expression
   37           | expression . MC_OR expression

    MC_AND  shift, and go to state 78
    MC_OR   shift, and go to state 79
    INFEG   shift, and go to state 80
    SUPEG   shift, and go to state 81
    EGAL    shift, and go to state 82
    DIFF    shift, and go to state 83
    '<'     shift, and go to state 84
    '>'     shift, and go to state 85
    '+'     shift, and go to state 86
    '-'     shift, and go to state 87
    '*'     shift, and go to state 88
    '/'     shift, and go to state 89
    ')'     shift, and go to state 91


state 64

   24 loop_stmt: MC_LOOP MC_WHILE '(' . expression ')' '{' instructions '}' MC_ENDLOOP ';'

    MC_NON    shift, and go to state 56
    IDF       shift, and go to state 57
    CST_INT   shift, and go to state 58
    CST_REEL  shift, and go to state 59
    '('       shift, and go to state 60

    expression  go to state 92


state 65

   25 loop_stmt: MC_FOR IDF MC_IN . expression MC_TO expression '{' instructions '}' MC_ENDFOR ';'

    MC_NON    shift, and go to state 56
    IDF       shift, and go to state 57
    CST_INT   shift, and go to state 58
    CST_REEL  shift, and go to state 59
    '('       shift, and go to state 60

    expression  go to state 93


state 66

   21 instruction: MC_INPUT '(' IDF . ')' ';'

    ')'  shift, and go to state 94


state 67

   47 arg: CST_STR .

    $default  reduce using rule 47 (arg)


state 68

   26 expression: expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '<' expression
